feat(init version): ReferenceConnectionGraph
